[package]
name = "argon_hash_password"
version = "0.1.2"
edition = "2021"
description = "Helper functions for common argon2 password hashing requirements"
homepage = "https://github.com/tirax-lab/argon_hash_password"
repository = "https://github.com/tirax-lab/argon_hash_password"
license-file = "LICENSE.txt"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_core = { version = "0.6", features = ["std"] }
argon2 = "0.4"
